src/test/ui/issues/issue-39211.stderr
error: constant expression depends on a generic parameter
  --> $DIR/issue-39211.rs:11:17
   |
LL |     let a = [3; M::Row::DIM];
   |                 ^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: failed to evaluate the given constant
  --> $DIR/issue-39211.rs:11:17
   |
LL |     let a = [3; M::Row::DIM];
   |                 ^^^^^^^^^^^

error: aborting due to 2 previous errors

